syntax = "proto3";

package controller.sessions.v1;
option go_package = "github.com/hashicorp/boundary/internal/sessions;sessions";

import "controller/storage/timestamp/v1/timestamp.proto";

// SessionResponse contains information necessary for a client to establish a session
message SessionResponse {
    // ID of the session job
    string id = 10;

    // Type of the session (e.g. tcp, ssh, etc.)
    string type = 20;

    // The certificate to use when connecting (or if using custom certs, to
    // serve as the "login"). Raw DER bytes.
    bytes certificate = 30;

    // The private key to use when connecting (or if using custom certs, to pass
    // as the "password").
    bytes private_key = 40;

    // Worker information. The first worker in the slice should be prioritized.
    repeated Worker workers = 50;
}

message Worker {
    // The address of the worker
    string address = 10;
}